syntax = "proto3";
package qq_token;

option go_package = "_/_qq__";

message TokenRefreshRetrieveByIdWithIdInferred {
  reserved 1 to 1024;
  string principalId = 1025;
  string principalService = 1026;
  string resourceVersion = 1027;
  string idempotencyId = 1028;
  string requestId = 1029;
  string responseId = 1030;
}

message TokenRefreshRetrieveByIdWithIdRequest {
  reserved 1 to 255;
  // The Id of the token.
  string tokenId = 777;
}

message TokenRefreshRetrieveByIdWithIdExt {
  reserved 1 to 3096;
  string nonce = 3097;
}

message TokenRefreshRetrieveByIdWithIdCommand {
  reserved 1 to 1024;
  TokenRefreshRetrieveByIdWithIdRequest request = 1025;
  TokenRefreshRetrieveByIdWithIdExt ext = 1026;
}

message TokenRefreshRetrieveByIdWithId {
  reserved 1 to 1024;
  TokenRefreshRetrieveByIdWithIdRequest request = 1025;
  TokenRefreshRetrieveByIdWithIdInferred inferred = 1026;
  TokenRefreshRetrieveByIdWithIdExt ext = 1027;
}

message TokenRefreshRetrieveByIdWithIdResponse {
  reserved 1;

  message RefreshTokenResponse {
    message RefreshTokenData {}

    message MetaData {
      message Metal {}
      message ScopeLike {
        string scope = 3813153;
      }

      message DeviceInfo {
        string description = 113933319;
        string lastAccessedAddress = 229931013;
        // The number of milliseconds since the unix epoch: January 1, 1970 00:00:00 UTC. This value is always in UTC.
        int64 lastAccessedInstant = 345894426;
        string name = 3373707;
        string type = 3575610;
      }
      map<string, Metal> data = 3076010;
      DeviceInfo device = 261415340;
      repeated ScopeLike scopes = 370897762;
    }

    string id = 3355;
    string userId = 299159995;
    string tenantId = 232951965;
    string token = 110541305;
    string applicationId = 474482038;
    map<string, RefreshTokenData> data = 3076010;
    // The number of milliseconds since the unix epoch: January 1, 1970 00:00:00 UTC. This value is always in UTC.
    int64 insertInstant = 372320490;
    MetaData metaData = 450957489;
    // The number of milliseconds since the unix epoch: January 1, 1970 00:00:00 UTC. This value is always in UTC.
    int64 startInstant = 212510498;
  }

  RefreshTokenResponse jwt = 2;
}
